--- a/index.html
+++ b/index.html
@@ -31,12 +31,14 @@
     <div id="timeline-title">
         <h1>A History</h1>
     </div>
-    <div>
-        <label class="switch">
-            <input type="checkbox">
-            <span class="slider round"></span>
-        </label>
-    </div>
+<!--
+<div>
+    <button id="filter-ko" class="filter-btn" data-attr="KO">KELLY</button>
+    <button id="filter-lb" class="filter-btn" data-attr="LB">LOWELL</button>
+    <button id="filter-ou" class="filter-btn" data-attr="OU">OU</button>
+    <button id="filter-ba" class="filter-btn" data-attr="BA">BANDER</button>
+</div>
+-->
     <!-- TIMELINE -->
     <div>
         <div id="timeline-container"></div>
